--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="images/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>EasyBank - Landing Page</title>
 
     <!-- link to Custom Css -->
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
 
+
+
+
+
+
+
+    
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        Coded by
+        <a href="https://github.com/Dmayor22" target="_blank"
+          >Oluwamuyiwa Sogbetun
+        </a>
+      </div>
+    </footer>
     <!-- Links to Vanilla Js -->
-     <script src="app.js"></script>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
