--- a/index.html
+++ b/index.html
@@ -204,6 +204,64 @@
           </div>
         </div>
       </section>
+
+      <section class="articles">
+        <h3>Latest Articles</h3>
+
+        <div class="articles_list">
+          <!-- First article -->
+          <div class="articles_details">
+            <div class="articles_logo">
+              <img src="images/image-currency.jpg" alt="image-currency" />
+            </div>
+            <p>By Clare Robinson</p>
+            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>
+              The world is getting smaller and we're becoming more mobile. So
+              why should you be forced to only receive money in a single...
+            </p>
+          </div>
+
+          <!-- Second article -->
+          <div class="articles_details">
+            <div class="articles_logo">
+              <img src="images/image-currency.jpg" alt="image-currency" />
+            </div>
+            <p>By Clare Robinson</p>
+            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>
+              The world is getting smaller and we're becoming more mobile. So
+              why should you be forced to only receive money in a single...
+            </p>
+          </div>
+
+          <!-- Third article  -->
+          <div class="articles_details">
+            <div class="articles_logo">
+              <img src="images/image-currency.jpg" alt="image-currency" />
+            </div>
+            <p>By Clare Robinson</p>
+            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>
+              The world is getting smaller and we're becoming more mobile. So
+              why should you be forced to only receive money in a single...
+            </p>
+          </div>
+
+          <!-- Fourth article -->
+          <div class="articles_details">
+            <div class="articles_logo">
+              <img src="images/image-currency.jpg" alt="image-currency" />
+            </div>
+            <p>By Clare Robinson</p>
+            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>
+              The world is getting smaller and we're becoming more mobile. So
+              why should you be forced to only receive money in a single...
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
