--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
               <img src="images/image-currency.jpg" alt="image-currency" />
             </div>
             <p>By Clare Robinson</p>
-            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p class="article_text">
+              Receive money in any cuurency with no fees
+            </p>
             <p>
               The world is getting smaller and we're becoming more mobile. So
               why should you be forced to only receive money in a single...
@@ -225,13 +227,15 @@
           <!-- Second article -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-currency.jpg" alt="image-currency" />
+              <img src="images/image-restaurant.jpg" alt="image-restaurant" />
             </div>
-            <p>By Clare Robinson</p>
-            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>By Wilson Hutton</p>
+            <p class="article_text">
+              Treat yourslef without worrying about money
+            </p>
             <p>
-              The world is getting smaller and we're becoming more mobile. So
-              why should you be forced to only receive money in a single...
+              Our simple budgetting feature allows you to separate out your
+              spending and set realistic limits each month. That means you...
             </p>
           </div>
 
@@ -240,24 +244,27 @@
             <div class="articles_logo">
               <img src="images/image-currency.jpg" alt="image-currency" />
             </div>
-            <p>By Clare Robinson</p>
-            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p>By Wilson Hutton</p>
+            <p class="article_text">Take your Easybank card wherever you go.</p>
             <p>
-              The world is getting smaller and we're becoming more mobile. So
-              why should you be forced to only receive money in a single...
+              We want you to enjoy your travels. This is why we don't charge any
+              fees on putchase while you're abroad. We'll even show you...
             </p>
           </div>
 
           <!-- Fourth article -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-currency.jpg" alt="image-currency" />
+              <img src="images/image-confetti.jpg" alt="image-currency" />
             </div>
             <p>By Clare Robinson</p>
-            <p id="article_text">Receive money in any cuurency with no fees</p>
+            <p class="article_text">
+              Our invite-pnly Beta accounts are now live!
+            </p>
             <p>
-              The world is getting smaller and we're becoming more mobile. So
-              why should you be forced to only receive money in a single...
+              After a lot of hard work by the whole team, we're excited to
+              launch our closed beta. It's easy to request an invite through the
+              site...
             </p>
           </div>
         </div>
