--- a/index.html
+++ b/index.html
@@ -350,6 +350,11 @@
           <li><a href="#">Privacy Policy</a></li>
         </ul>
       </div>
+
+      <div class="foot_three">
+        <button type="button" class="req-btn">Request Invite</button>
+
+      </div>
     </footer>
     <!-- Links to Vanilla Js -->
     <script src="app.js"></script>
