--- a/index.html
+++ b/index.html
@@ -325,17 +325,6 @@
         </div>
       </div>
 
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >
-        Coded by
-        <a href="https://github.com/Dmayor22" target="_blank"
-          >Oluwamuyiwa Sogbetun
-        </a>
-      </div>
-
       <!-- foot two -->
       <div class="foot_two">
         <ul>
@@ -354,6 +343,20 @@
       <div class="foot_three">
         <button type="button" class="req-btn">Request Invite</button>
 
+        <div class="trademark">
+            <p>&copy; EasyBank. All Rights Reserved</p>
+        </div>
+      </div>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        Coded by
+        <a href="https://github.com/Dmayor22" target="_blank"
+          >Oluwamuyiwa Sogbetun
+        </a>
       </div>
     </footer>
     <!-- Links to Vanilla Js -->
