--- a/index.html
+++ b/index.html
@@ -206,66 +206,93 @@
       </section>
 
       <section class="articles">
-        <h3>Latest Articles</h3>
-
+        <h1>Latest Articles</h1>
         <div class="articles_list">
           <!-- First article -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-currency.jpg" alt="image-currency" />
+              <img
+                src="images/image-currency.jpg"
+                alt="image-currency"
+                class="article_thumbnail"
+              />
             </div>
-            <p>By Clare Robinson</p>
-            <p class="article_text">
-              Receive money in any cuurency with no fees
-            </p>
-            <p>
-              The world is getting smaller and we're becoming more mobile. So
-              why should you be forced to only receive money in a single...
-            </p>
+            <div class="article_body">
+              <span class="author">By Clare Robinson </span>
+              <h4 class="article_title">
+                Receive money in any cuurency with no fees
+              </h4>
+              <span class="article_text">
+                The world is getting smaller and we're becoming more mobile. So
+                why should you be forced to only receive money in a single...
+              </span>
+            </div>
           </div>
 
           <!-- Second article -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-restaurant.jpg" alt="image-restaurant" />
+              <img
+                src="images/image-restaurant.jpg"
+                alt="image-restaurant"
+                class="article_thumbnail"
+              />
             </div>
-            <p>By Wilson Hutton</p>
-            <p class="article_text">
-              Treat yourslef without worrying about money
-            </p>
-            <p>
-              Our simple budgetting feature allows you to separate out your
-              spending and set realistic limits each month. That means you...
-            </p>
+            <div class="article_body">
+              <span class="author">By Wilson Hutton</span>
+              <h4 class="article_title">
+                Treat yourslef without worrying about money
+              </h4>
+              <span class="article_text">
+                Our simple budgetting feature allows you to separate out your
+                spending and set realistic limits each month. That means you...
+              </span>
+            </div>
           </div>
 
           <!-- Third article  -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-currency.jpg" alt="image-currency" />
+              <img
+                src="images/image-currency.jpg"
+                alt="image-currency"
+                class="article_thumbnail"
+              />
             </div>
-            <p>By Wilson Hutton</p>
-            <p class="article_text">Take your Easybank card wherever you go.</p>
-            <p>
-              We want you to enjoy your travels. This is why we don't charge any
-              fees on putchase while you're abroad. We'll even show you...
-            </p>
+
+            <div class="article_body">
+              <span class="author">By Wilson Hutton</span>
+              <h4 class="article_title">
+                Take your Easybank card wherever you go.
+              </h4>
+              <span class="article_text">
+                We want you to enjoy your travels. This is why we don't charge
+                any fees on putchase while you're abroad. We'll even show you...
+              </span>
+            </div>
           </div>
 
           <!-- Fourth article -->
           <div class="articles_details">
             <div class="articles_logo">
-              <img src="images/image-confetti.jpg" alt="image-currency" />
+              <img
+                src="images/image-confetti.jpg"
+                alt="image-confetti"
+                class="article_thumbnail"
+              />
             </div>
-            <p>By Clare Robinson</p>
-            <p class="article_text">
-              Our invite-pnly Beta accounts are now live!
-            </p>
-            <p>
-              After a lot of hard work by the whole team, we're excited to
-              launch our closed beta. It's easy to request an invite through the
-              site...
-            </p>
+
+            <div class="article_body">
+              <span class="author"> By Clare Robinson </span>
+              <h4 class="article_title">
+                Our invite-pnly Beta accounts are now live!
+              </h4>
+              <span class="article_text">
+                After a lot of hard work by the whole team, we're excited to
+                launch our closed beta. It's easy to request an invite through
+                the site...
+              </span>
+            </div>
           </div>
         </div>
       </section>
@@ -344,7 +371,7 @@
         <button type="button" class="req-btn">Request Invite</button>
 
         <div class="trademark">
-            <p>&copy; EasyBank. All Rights Reserved</p>
+          <p>&copy; EasyBank. All Rights Reserved</p>
         </div>
       </div>
 
@@ -359,6 +386,7 @@
         </a>
       </div>
     </footer>
+
     <!-- Links to Vanilla Js -->
     <script src="app.js"></script>
   </body>
