--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <!-- Right Content -->
         <div class="right-content">
-          <img src="images/image-mockups.png" alt="image-mockups" />
+          <img src="images/image-mockups.png" alt="image-mockups" class="image"/>
         </div>
       </section>
 
